# webinar-demos

./: .coveragerc  .env.dist  .env_example  .gitignore  Dockerfile  Makefile  README.md  airflow.cfg  docker-compose.override.yml  docker-compose.override.yml.dist  lint_af_config.sh  pytest.ini  requirements.txt  ruff.toml  webinar_code_snippets.py
.astro/: config.yaml
.claude/: settings.json
.devcontainer/: devcontainer.json
airflow-deving/: requirements.txt
api_scripts/: delete_all_queued_dataset_events.py  grocery_store_checkout_inference.py  start_fine_tuning_pipeline.py
dags/: 00-setup.py  01-daily_report.py  02-data_quality.py  03-daily_report_soft_dq.py  1_extract_from_api.py  2_move_ingest_to_stage.py  3_load_to_snowflake.py  4_transform_data_in_snowflake.py  5_move_stage_to_archive.py  aggregate_feedback_per_product.py  ai_support_ticket_system.py  api_to_snowflake.py  champion_challenger.py  clear_weaviate.py  customer_stats.py  daily_dag_cron_data_interval_timetable.py  daily_dag_cron_trigger_timetable.py  daily_report.py  db_access_af3.py  demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  direct_db_access.py  etl_dag.py  etl_pii_sensitive_dag.py  eval_and_cost_estimate.py  evaluate_formatting_fine_tuning_examples.py  eventdriven.py  exampledag.py  extract_from_api.py  filter_for_high_quality_feedback.py  fine_tune_gpt.py  generate_product_insight.py  generate_recipe.py  in_cat_fact.py  ingest_bunny_data.py  (+34 more)
include/: helpers.py  (+22 more)
plugins/cluster_policies/: pyproject.toml
plugins/cluster_policies/my_cluster_policies/: policy.py
(+230 files in other folders)
